grammar.js
    source_file: $ => seq(
      optional($.hashbang),
      optional($.preamble),
      repeat(choice(
        $.action_block,
        $.macro_definition,
      )),
    ),

    preamble: $ => repeat1($._preamble_item),
    _preamble_item: $ => choice(
      $.config_block,
      $.c_preproc,
      $.c_preproc_block,
      seq($.c_struct, optional(';')),
      $.import_statement,
      $.map_declaration,
    ),

    action_block: $ => seq($.probes_list, optional($.predicate), $.action),

    probes_list: $ => seq(
      sepBy1(',', $.probe),
      optional(','),
    ),

    predicate: $ => seq('/', $._predicate_expression),
    _predicate_expression: $ => seq($._expression, '/'),

    probe: $ => choice(
      /* Built-in begin/end probes with no arguments */
      field('provider', $.begin_end_provider),

      /* Probes with diffrent arguments, i.e. fentry[:module]:function  */
      $._fentry_fexit,
      $._fentry_fexit_bpf,
      $._kprobe_kretprobe,
      $._uprobe_uretprobe,
      $._tracepoint,
      $._rawtracepoint,
      $._hardware_event,
      $._software_event,
      $._bench_test,
      $._profile_interval,
      $._iter,
      $._usdt,
      $._watchpoint,
    ),

    begin_end_provider: _ => choice(
      'BEGIN',
      'END',
      'begin',
      'end',
    ),

    _fentry_fexit: $ => seq(
      field('provider', $.fentry_fexit_provider),
      $._probe_arguments__optional_module_and_function,
    ),

    _fentry_fexit_bpf: $ => seq(
      field('provider', $.fentry_fexit_provider),
      ':',
      field('subprovider', $.bpf_identifier),
      optional(seq(
        ':',
        field('program_id', $.decimal_number),
      )),
      ':',
      field('program_name', $.wildcard_identifier),
    ),

    fentry_fexit_provider: _ => choice(
      'fentry', 'f',
      'fexit', 'fr',
      'kfunc', // Deprecated alias of fentry
      'kretfunc', // Deprecated alias of fexit
    ),

    _kprobe_kretprobe: $ => seq(
      // TODO add: kprobe[:module]:fn+offset
      field('provider', $.kprobe_kretprobe_provider),
      $._probe_arguments__optional_module_and_function,
    ),

    _uprobe_uretprobe: $ => seq(
      field('provider', $.uprobe_uretprobe_provider),
      ':',
      field('binary', $.file_identifier),
      ':',
      field('function', $.identifier),
    ),

    uprobe_uretprobe_provider: $ => choice(
      'uprobe', 'u',
      'uretprobe', 'ur',
    ),

    _tracepoint: $ => seq(
      field('provider', $.tracepoint_provider),
      ':',
      field('subsys', $._wildcard_identifier),
      ':',
      field('event', $._wildcard_identifier),
    ),

    tracepoint_provider: _ => choice(
      'tracepoint', 't',
    ),

    _rawtracepoint: $ => seq(
      field('provider', $.rawtracepoint_provider),
      $._probe_arguments__optional_module_and_function,
    ),

    _hardware_event: $ => seq(
      field('provider', $.hardware_event_provider),
      $._probe_arguments__event_and_optional_count,
    ),

    _software_event: $ => seq(
      field('provider', $.software_event_provider),
      $._probe_arguments__event_and_optional_count,
    ),

    hardware_event_provider: _ => choice(
      'hardware', 'h',
    ),

    software_event_provider: _ => choice(
      'software', 's',
    ),

    _bench_test: $ => seq(
      field('provider', $.bench_test_provider),
      ':',
      field('function', $.identifier),
    ),

    bench_test_provider: _ => choice(
      'bench',
      'test',
    ),

    _profile_interval: $ => seq(
      field('provider', $.profile_interval_provider),
      choice(
        $._profile_interval_time,
        $._profile_interval_hz,
      ),
    ),

    time_unit: $ => choice(
      'us', 'ms', 's',
    ),

    profile_interval_provider: _ => choice(
      'profile', 'p',
      'interval', 'i',
    ),

    _iter: $ => seq(
      field('provider', $.iter_provider),
      ':',
      field('object', $.identifier),
      optional(seq(
        ':',
        field('pin', $.file_identifier),
      )),
    ),

    iter_provider: _ => choice(
      'iter', 'it',
    ),

    _usdt: $ => seq(
      field('provider', $.ustd_provider),
      ':',
      field('binary', $.file_identifier),
      optional(seq(
        ':',
        field('namespace', $.identifier),
      )),
      ':',
      field('function', $.identifier),
    ),

    ustd_provider: $ => choice(
      'usdt', 'U',
    ),

    _watchpoint: $ => seq(
      field('provider', $.watchpoint_provider),
      ':',
      choice(
        field('address', $.integer_literal),
        seq(
          field('function', $.identifier),
          '+',
          field('argn', $.argn_identifier),
        ),
      ),
      ':',
      field('length', $.integer_literal),
      ':',
      field('mode', $.watchpoint_mode),
    ),

    action: $ => seq(
      '{',
      optional($._action_body),
      '}',
    ),

    _action_body: $ => seq(
      repeat(choice(
        seq($._statement, ';'),
        $._loop_or_if_statement,
      )),
      choice(
        seq($._statement, optional(';')),
        $._loop_or_if_statement,
      ),
    ),

    /* Internal block */
    _expression: $ => choice(
      $.binary_expression,
      alias($._div_expression, $.binary_expression),
      $.call_expression,
      $.cast_expression,
      $.comptime_expression,
      $.field_expression,
      $.subscript_expression,
      $.sizeof_expression,
      $.offsetof_expression,
      $.pointer_expression,
      $.conditional_expression,
      $.unary_expression,
      $.tuple_expression,
      $.parenthesized_expression,
      $.update_expression,
      $.string_literal,
      $.integer_literal,
      $.boolean_literal,
      $._variable,
      $.identifier,
      $.script_parameter,
      $._retval_builtin,
      alias($._block_expression, $.block_expression),
      $.if_expression,
      $.args_keyword,
    ),

    binary_expression: $ => {
      const table = [
        /* eslint-disable no-multi-spaces */
        ['%', PREC.multiplicative],
        // ['/',  PREC.multiplicative],
        ['*',  PREC.multiplicative],
        ['+',  PREC.additive],
        ['-',  PREC.additive],
        ['<<', PREC.shift],
        ['>>', PREC.shift],
        ['<=', PREC.relational],
        ['>=', PREC.relational],
        ['<',  PREC.relational],
        ['>',  PREC.relational],
        ['==', PREC.equal],
        ['!=', PREC.equal],
        ['&',  PREC.bitwise_and],
        ['^',  PREC.bitwise_xor],
        ['|',  PREC.bitwise_or],
        ['&&', PREC.logical_and],
        ['||', PREC.logical_or],
        /* eslint-enable no-multi-spaces */
      ];

      return choice( ...table.map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        )),
      ));
    },

    call_expression: $ => prec(PREC.call,
      seq(
        field('function', $.identifier),
        field('arguments', $.arguments),
      ),
    ),

    arguments: $ => seq(
      '(',
      sepBy(',', $._expression),
      ')',
    ),

    cast_expression: $ => prec(PREC.cast,
      seq(
        '(',
        field('type', $.type_specifier),
        ')',
        field('value', $._expression),
      ),
    ),

    type_specifier: $ => choice(
      $._type_specifier,
      $.typeof_expression,
    ),

    _type_specifier: $=> choice(
      $.integer_type,
      $.array_type,
      $.pointer_type,
      $.struct_type,
      $.string_type,
      $.identifier,
    ),

    pointer_type: $ => seq(
      choice(
        $.integer_type,
        $.array_type,
        $.struct_type,
        $.identifier,
      ),
      repeat1('*'),
    ),

    integer_type: _ => choice(
      'bool',
      'int8',
      'int16',
      'int32',
      'int64',
      'uint8',
      'uint16',
      'uint32',
      'uint64',
    ),

    struct_type: $ => seq('struct', $.identifier),

    field_expression: $ => prec.left(PREC.field, seq(
      field('argument', choice(
        $.scratch_variable,
        $.map_variable,
        $.identifier,
        $.args_keyword,
        $._retval_builtin,
        $.call_expression,
        $.field_expression,
        $.parenthesized_expression,
      )),
      choice('.', '->'),
      field('field', choice(
        $.identifier,
        $.integer_literal,
      )),
    )),

    sizeof_expression: $ => seq(
      'sizeof',
      '(',
      choice(
        field('type', $.type_specifier),
        field('value', $._expression),
      ),
      ')',
    ),

    offsetof_expression: $ => seq(
      'offsetof',
      '(',
      field('type', $.struct_type),
      ',',
      field('member', sepBy1('.', $.identifier)),
      ')',
    ),

    pointer_expression: $ => prec.left(PREC.cast, choice(
      seq('*', field('argument', $._expression)),
      seq('&', field('argument', $.scratch_variable)),
    )),

    tuple_expression: $ => seq(
      '(',
      seq($._expression, ','),
      sepBy1(',', $._expression),
      ')',
    ),

    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      ')',
    ),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        alias(/[^"\\\n]+/, $.string_content),
        alias(/\\[^\n]/, $.escape_sequence),
      )),
      '"',
    ),

    integer_literal: _ => token(seq(
      optional('-'),
      choice(
        /[0-9][0-9_]*/,
        /0[xX][0-9a-fA-F_]+/,
        /[0-9]+[eE][0-9]+/,
      ),
      choice(
        seq(
          optional(choice('u', 'U')),
          optional(choice('ll', 'l', 'L', 'LL')),
        ),
        seq(
          optional(choice('ns', 'us', 'ms', 's', 'm', 'h', 'd')),
        ),
      ),
    )),

    map_variable: $ => seq(
      token(seq(
        '@',
        optional(/[_a-zA-Z][_a-zA-Z0-9]*/),
      )),
      optional($.indexes_list),
    ),

    _retval_builtin: $ => seq(
      $.retval_identifier,
      optional(seq('(', ')')),
    ),

    scratch_variable: _ => /[$][_a-zA-Z][_a-zA-Z0-9]*/,
    identifier: _ => /[_a-zA-Z][_a-zA-Z0-9]*/,
    wildcard_identifier: _ => /[_a-zA-Z*][_a-zA-Z0-9.*]*/,
    file_identifier: _ => token(/[./_a-zA-Z0-9]+/),
    identifier_with_dash: _ => /[_a-zA-Z][_a-zA-Z0-9\-]*/,
    args_keyword: _ => 'args',
