test/corpus/action_block.txt
============================================
Action block with two probes 
============================================

tracepoint:syscalls:sys_enter_open,
tracepoint:syscalls:sys_enter_openat {
	printf("%-6d %-16s %s\n", pid, comm, str(args.filename));
}

---

(source_file
  (action_block
    (probes
      (probe
        provider: (probe_provider)
        module: (wildcard_identifier)
        event: (wildcard_identifier))
      (probe
        provider: (probe_provider)
        module: (wildcard_identifier)
        event: (wildcard_identifier)))
    (action
      (statement
        (call_expression
          function: (identifier)
          arguments: (arguments
            (string_literal
              (string_content)
              (escape_sequence))
            (identifier)
            (identifier)
            (call_expression
              function: (identifier)
              arguments: (arguments
                (args_item
                  (identifier))))))))))

============================================
Probe with wildcard
============================================

kprobe:*socket* { printf("%s\n", ksym(reg("ip"))) }

---
(source_file
  (action_block
    (probes
      (probe
        provider: (probe_provider)
        event: (wildcard_identifier)))
    (action
      (statement
        (call_expression
          function: (identifier)
          arguments: (arguments
            (string_literal
              (string_content)
              (escape_sequence))
            (call_expression
              function: (identifier)
              arguments: (arguments
                (call_expression
                  function: (identifier)
                  arguments: (arguments
                    (string_literal
                      (string_content))))))))))))

============================================
Action block with predicate
============================================

kprobe:vfs_read /comm == "bash"/ {
  printf("read by %s\n", comm);
}

---

(source_file
  (action_block
    (probes
      (probe
        provider: (probe_provider)
        event: (wildcard_identifier)))
    (predicate
      (binary_expression
        left: (identifier)
        right: (string_literal
          (string_content))))
    (action
      (statement
        (call_expression
          function: (identifier)
          arguments: (arguments
            (string_literal
              (string_content)
              (escape_sequence))
            (identifier)))))))
