test/corpus/variables.txt
============================================
Map variable assignment
============================================
BEGIN { @m[1,10] = 1; }
---
(source_file
  (action_block
    (probes
      (probe))
    (action
      (statement
        (assignment
          left: (map_variable
            (integer_literal)
            (integer_literal))
          right: (integer_literal))))))


============================================
Scratch variable assignment
============================================
BEGIN { $a = 1; }
---
(source_file
  (action_block
    (probes
      (probe))
    (action
      (statement
        (assignment
          left: (scratch_variable)
          right: (integer_literal))))))

============================================
Referencing variables
============================================
software:dummy { $a = 3; @ = 4; @r = $a + @; }
---
(source_file
  (action_block
    (probes
      (probe
        provider: (probe_provider)
        event: (wildcard_identifier)))
    (action
      (statement
        (assignment
          left: (scratch_variable)
          right: (integer_literal)))
      (statement
        (assignment
          left: (map_variable)
          right: (integer_literal)))
      (statement
        (assignment
          left: (map_variable)
          right: (binary_expression
            left: (scratch_variable)
            right: (map_variable)))))))



